--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">BrailleSense GR</string>
+    <string name="theme">Theme</string>
+    <string name="learn">Μάθηση</string>
+    <string name="settings">Ρυθμίσεις</string>
+    <string name="welcomeVoiceText">Kαλωσήρθες στο BrailleSense GR. Πάτα στη μέση της οθόνης για Μάθηση. Πάτα στο κάτω μέρος της οθόνης για Ρυθμίσεις</string>
+    <string name="learnVoiceText">Μάθηση</string>
+    <string name="settingsVoiceText">Ρυθμίσεις</string>
 </resources>
