feat: ask for tutorial and tutorial screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,65 @@
     <string name="theme">Theme</string>
     <string name="learn">Μάθηση</string>
     <string name="settings">Ρυθμίσεις</string>
-    <string name="welcomeVoiceText">Kαλωσήρθες στο BrailleSense GR. Πάτα στη μέση της οθόνης για Μάθηση. Πάτα στο κάτω μέρος της οθόνης για Ρυθμίσεις</string>
+    <string name="tutorial">Οδηγίες</string>
+    <string name="infoAboutTutorial">Θα ακολουθήσουν σύντομες οδηγίες για τη διάταξη της οθόνης εκμάθησης και πώς το θα γίνεται αυτή.</string>
+    <string name="begin">Ξεκίνα</string>
+    <string name="proceed">Συνέχεια</string>
+    <string name="skip">Παράλειψη</string>
+    <string name="welcomeVoiceText">Καλωσήρθες στο BrailleSense GR. Πάτησε στη μέση της οθόνης για Μάθηση. Πάτησε στο κάτω μέρος της οθόνης για Ρυθμίσεις</string>
     <string name="learnVoiceText">Μάθηση</string>
     <string name="settingsVoiceText">Ρυθμίσεις</string>
+    <string name="askForTutorialVoiceText">Θα ακολουθήσουν σύντομες οδηγίες για τη διάταξη της οθόνης εκμάθησης και το πώς θα γίνεται αυτή.
+        Πάτησε στη μέση της οθόνης για να συνεχίσεις. Πάτησε στο κάτω μέρος της οθόνης για να παραλείψεις αυτή τη διαδικασία.
+        Πάτησε στο πάνω αριστερά μέρος της οθόνης για να επιστρέψεις στην αρχική σελίδα.
+    </string>
+    <string name="tutorial1">
+        Η οθόνη εκμάθησης χωρίζεται σε δύο μέρη.
+        Το πρώτο βρίσκεται στη μέση της οθόνης, και περιέχει ένα κεφαλαίο γράμμα της ελληνικής αλφάβητου και το αντίστοιχο πεζό του, σε μορφή Braille.
+        Το κεφαλαίο γράμμα είναι τοποθετημένο πάνω απο το αντίστοιχο πεζό του. Ακούμπησε τα δάκτυλά σου σε αυτό το μέρος της οθόνης, για να αισθανθείς μέσω δονήσεων
+        το γράμμα που σχηματίζεται. ΠΡΟΣΟΧΗ. Δεν θα αισθανθείς να σχηματίζεται το γράμμα όπως είναι, αλλά το αντίστοιχο στον κώδικα Braille, δηλαδή με βούλες.
+    </string>
+    <string name="tutorial2">
+        Το δεύτερο βρίσκεται στο κάτω μέρος της οθόνης, όπου υπάρχουν τα κουμπιά προηγούμενο και επόμενο.
+        Μόνο στο πρώτο γράμμα υπάρχει μόνο ένα κουμπί, το κουμπί επόμενο, και βρίσκεται στη μέση του κάτω μέρους.
+        Από τα επόμενα γράμματα, το κουμπί προηγούμενο βρίσκεται στα αριστερά και το επόμενο στα δεξιά του κάτω μέρους.
+    </string>
+    <string name="tutorial3">
+        Τέλος, για να επιστρέψεις στην αρχική σελίδα, πάτησε στο πάνω αριστερά μέρος της οθόνης.
+        Για να ξεκινήσεις την εκμάθηση, πάτησε το κουμπί Ξεκίνα που βρίσκεται στο κάτω μέρος της οθόνης.
+    </string>
+    <string name="tutorialVoiceText">Η οθόνη εκμάθησης χωρίζεται σε δύο μέρη.
+        Το πρώτο βρίσκεται στη μέση της οθόνης, και περιέχει ένα κεφαλαίο γράμμα της ελληνικής αλφάβητου και το αντίστοιχο πεζό του, σε μορφή Braille.
+        Το κεφαλαίο γράμμα είναι τοποθετημένο πάνω απο το αντίστοιχο πεζό του. Ακούμπησε τα δάκτυλά σου σε αυτό το μέρος της οθόνης, για να αισθανθείς μέσω δονήσεων
+        το γράμμα που σχηματίζεται. Προσοχή. Δεν θα αισθανθείς να σχηματίζεται το γράμμα όπως είναι, αλλά το αντίστοιχο στον κώδικα Braille, δηλαδή με βούλες.
+        Το δεύτερο βρίσκεται στο κάτω μέρος της οθόνης, όπου υπάρχουν τα κουμπιά προηγούμενο και επόμενο.
+        Μόνο στο πρώτο γράμμα υπάρχει μόνο ένα κουμπί, το κουμπί επόμενο, και βρίσκεται στη μέση του κάτω μέρους.
+        Από τα επόμενα γράμματα, το κουμπί προηγούμενο βρίσκεται στα αριστερά και το επόμενο στα δεξιά του κάτω μέρους.
+        Τέλος, για να επιστρέψεις στην αρχική σελίδα, πάτησε στο πάνω αριστερά μέρος της οθόνης.
+        Για να ξεκινήσεις την εκμάθηση, πάτησε το κουμπί Ξεκίνα, που βρίσκεται στο κάτω μέρος της οθόνης.
+    </string>
+    <string name="alpha">Άλφα</string>
+    <string name="beta">Βήτα</string>
+    <string name="gamma">Γάμμα</string>
+    <string name="delta">Δέλτα</string>
+    <string name="epsilon">Έψιλον</string>
+    <string name="zita">Ζήτα</string>
+    <string name="ita">Ήτα</string>
+    <string name="theta">Θήτα</string>
+    <string name="iota">Ιώτα</string>
+    <string name="kappa">Κάππα</string>
+    <string name="lambda">Λάμδα</string>
+    <string name="mi">Μι</string>
+    <string name="ni">Νι</string>
+    <string name="ksi">Ξι</string>
+    <string name="omicron">Όμικρον</string>
+    <string name="pi">Πι</string>
+    <string name="ro">Ρο</string>
+    <string name="sigma">Σίγμα</string>
+    <string name="taf">Ταυ</string>
+    <string name="upsilon">Ύψιλον</string>
+    <string name="fi">Φι</string>
+    <string name="xi">Χι</string>
+    <string name="psi">Ψι</string>
+    <string name="omega">Ωμέγα</string>
 </resources>
