feat: clear instructions before learning process

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,32 +13,86 @@
     <string name="settingsVoiceText">Ρυθμίσεις</string>
     <string name="askForTutorialVoiceText">Θα ακολουθήσουν σύντομες οδηγίες για τη διάταξη της οθόνης εκμάθησης και το πώς θα γίνεται αυτή.
         Πάτησε στη μέση της οθόνης για να συνεχίσεις. Πάτησε στο κάτω μέρος της οθόνης για να παραλείψεις αυτή τη διαδικασία.
-        Πάτησε στο πάνω αριστερά μέρος της οθόνης για να επιστρέψεις στην αρχική σελίδα.
+        Πάτησε στο πάνω μέρος της οθόνης για να επιστρέψεις στην αρχική σελίδα.
     </string>
-    <string name="tutorial1">
+    <string name="eisagogi">
+        <![CDATA[
+            Η οθόνη εκμάθησης χωρίζεται σε δύο μέρη.<br/>
+            Το πρώτο βρίσκεται στη μέση της οθόνης, και περιέχει ένα πεζό γράμμα της ελληνικής αλφάβητου, σε μορφή Braille.<br/>
+            Κάθε γράμμα εμφανίζεται στην οθόνη μέσα σε ένα πλέγμα 2 στηλών και 3 γραμμών. Αυτό είναι το κλασικό σύστημα των 6 κουκκίδων του Braille.
+            Στην οθόνη, τα “κουμπιά κουκκίδων” είναι απτικά σημεία που μπορείτε να αγγίζετε.
+            Όταν ένα κουμπί είναι ενεργό, θα δονηθεί.
+            Όταν είναι ανενεργό, δεν θα αντιδράσει.
+        ]]>
+    </string>
+    <string name="prosanatolismosOthonhs">
+        <![CDATA[
+            Φανταστείτε ότι αυτό το μέρος της οθόνης είναι χωρισμένο σε έξι θέσεις όπως σε ένα κουτί αυγών:<br/>
+            - Οι θέσεις 1–3 είναι στην αριστερή στήλη (από πάνω προς τα κάτω).<br/>
+            - Οι θέσεις 4–6 είναι στη δεξιά στήλη.
+        ]]>
+    </string>
+    <string name="topothetisiDaxtilon">
+        <![CDATA[
+            1) Τοποθέτησε τον αριστερό δείκτη σου στο επάνω αριστερό μέρος αυτού του τμήματος της οθόνης — αυτή είναι η κουκκίδα 1.<br/>
+            2) Τοποθέτησε τον δεξί δείκτη σου στο επάνω δεξί μέρος αυτού του τμήματος της οθόνης — αυτή είναι η κουκκίδα 4.<br/>
+            3) Μετακίνησε απαλά προς τα κάτω για να βρεις τις κουκκίδες 2–5 και 3–6.<br/>
+            (Θα τις αισθανθείς σε τρεις σειρές: πάνω, μεσαία και κάτω.)
+        ]]>
+    </string>
+    <string name="plohgisiMetaksiGrammatwn">
+        <![CDATA[
+            Το δεύτερο μέρος βρίσκεται κάτω από το πλέγμα των κουκκίδων, στο κάτω μέρος της οθόνης. Εκεί υπάρχουν δύο μεγάλα κουμπιά πλοήγησης:<br/>
+            - Το κουμπί στα αριστερά σε πάει στο προηγούμενο γράμμα.<br/>
+            - Το κουμπί στα δεξιά σε πάει στο επόμενο γράμμα.<br/>
+            Αν βρίσκεσαι στο πρώτο γράμμα (Άλφα), θα υπάρχει μόνο το δεξί κουμπί, το οποίο θα είναι τοποθετημένο στη μέση.
+        ]]>
+    </string>
+    <string name="aisthisiDiataksis">
+        <![CDATA[
+            Για να αναγνωρίσεις σωστά το γράμμα:<br/>
+            1) Ξεκίνα πάντα από επάνω αριστερά.<br/>
+            2) Κινήσου κατακόρυφα προς τα κάτω, μετά δεξιά και πάλι προς τα πάνω.<br/>
+            3) Οι κουκκίδες που “απαντούν” με δόνηση είναι οι ενεργές.<br/>
+            4) Συνδύασε τις ενεργές θέσεις με τη φωνητική πληροφορία του γράμματος.
+        ]]>
+    </string>
+    <string name="epistrofh">
+        <![CDATA[
+            Τέλος, για να επιστρέψεις στην αρχική σελίδα, πάτησε στο επάνω μέρος της οθόνης.
+        ]]>
+    </string>
+    <string name="tutorialVoiceText">
+        Εισαγωγή.
         Η οθόνη εκμάθησης χωρίζεται σε δύο μέρη.
-        Το πρώτο βρίσκεται στη μέση της οθόνης, και περιέχει ένα κεφαλαίο γράμμα της ελληνικής αλφάβητου και το αντίστοιχο πεζό του, σε μορφή Braille.
-        Το κεφαλαίο γράμμα είναι τοποθετημένο πάνω απο το αντίστοιχο πεζό του. Ακούμπησε τα δάκτυλά σου σε αυτό το μέρος της οθόνης, για να αισθανθείς μέσω δονήσεων
-        το γράμμα που σχηματίζεται. ΠΡΟΣΟΧΗ. Δεν θα αισθανθείς να σχηματίζεται το γράμμα όπως είναι, αλλά το αντίστοιχο στον κώδικα Braille, δηλαδή με βούλες.
-    </string>
-    <string name="tutorial2">
-        Το δεύτερο βρίσκεται στο κάτω μέρος της οθόνης, όπου υπάρχουν τα κουμπιά προηγούμενο και επόμενο.
-        Μόνο στο πρώτο γράμμα υπάρχει μόνο ένα κουμπί, το κουμπί επόμενο, και βρίσκεται στη μέση του κάτω μέρους.
-        Από τα επόμενα γράμματα, το κουμπί προηγούμενο βρίσκεται στα αριστερά και το επόμενο στα δεξιά του κάτω μέρους.
-    </string>
-    <string name="tutorial3">
-        Τέλος, για να επιστρέψεις στην αρχική σελίδα, πάτησε στο πάνω αριστερά μέρος της οθόνης.
-        Για να ξεκινήσεις την εκμάθηση, πάτησε το κουμπί Ξεκίνα που βρίσκεται στο κάτω μέρος της οθόνης.
-    </string>
-    <string name="tutorialVoiceText">Η οθόνη εκμάθησης χωρίζεται σε δύο μέρη.
-        Το πρώτο βρίσκεται στη μέση της οθόνης, και περιέχει ένα κεφαλαίο γράμμα της ελληνικής αλφάβητου και το αντίστοιχο πεζό του, σε μορφή Braille.
-        Το κεφαλαίο γράμμα είναι τοποθετημένο πάνω απο το αντίστοιχο πεζό του. Ακούμπησε τα δάκτυλά σου σε αυτό το μέρος της οθόνης, για να αισθανθείς μέσω δονήσεων
-        το γράμμα που σχηματίζεται. Προσοχή. Δεν θα αισθανθείς να σχηματίζεται το γράμμα όπως είναι, αλλά το αντίστοιχο στον κώδικα Braille, δηλαδή με βούλες.
-        Το δεύτερο βρίσκεται στο κάτω μέρος της οθόνης, όπου υπάρχουν τα κουμπιά προηγούμενο και επόμενο.
-        Μόνο στο πρώτο γράμμα υπάρχει μόνο ένα κουμπί, το κουμπί επόμενο, και βρίσκεται στη μέση του κάτω μέρους.
-        Από τα επόμενα γράμματα, το κουμπί προηγούμενο βρίσκεται στα αριστερά και το επόμενο στα δεξιά του κάτω μέρους.
-        Τέλος, για να επιστρέψεις στην αρχική σελίδα, πάτησε στο πάνω αριστερά μέρος της οθόνης.
-        Για να ξεκινήσεις την εκμάθηση, πάτησε το κουμπί Ξεκίνα, που βρίσκεται στο κάτω μέρος της οθόνης.
+        Το πρώτο βρίσκεται στη μέση της οθόνης, και περιέχει ένα πεζό γράμμα της ελληνικής αλφάβητου, σε μορφή Braille.
+        Κάθε γράμμα εμφανίζεται στην οθόνη μέσα σε ένα πλέγμα δύο στηλών και τριών γραμμών. Αυτό είναι το κλασικό σύστημα των 6 κουκκίδων του Braille.
+        Στην οθόνη, τα “κουμπιά κουκκίδων” είναι απτικά σημεία που μπορείτε να αγγίζετε.
+        Όταν ένα κουμπί είναι ενεργό, θα δονηθεί.
+        Όταν είναι ανενεργό, δεν θα αντιδράσει.
+        Προσανατολισμός οθόνης.
+        Φανταστείτε ότι αυτό το μέρος της οθόνης είναι χωρισμένο σε έξι θέσεις όπως σε ένα κουτί αυγών,
+            - Οι θέσεις 1 έως 3 είναι στην αριστερή στήλη (από πάνω προς τα κάτω).
+            - Οι θέσεις 4 έως 6 είναι στη δεξιά στήλη.
+        Τοποθέτηση δαχτύλων.
+            1) Τοποθέτησε τον αριστερό δείκτη σου στο επάνω αριστερό μέρος αυτού του τμήματος της οθόνης — αυτή είναι η κουκκίδα 1.
+            2) Τοποθέτησε τον δεξί δείκτη σου στο επάνω δεξί μέρος αυτού του τμήματος της οθόνης — αυτή είναι η κουκκίδα 4.
+            3) Μετακίνησε απαλά προς τα κάτω για να βρεις τις κουκκίδες 2 έως 5 και 3 έως 6.
+            (Θα τις αισθανθείς σε τρεις σειρές: πάνω, μεσαία και κάτω.)
+        Πλοήγηση μεταξύ γραμμάτων.
+        Το δεύτερο μέρος βρίσκεται κάτω από το πλέγμα των κουκκίδων, στο κάτω μέρος της οθόνης. Εκεί υπάρχουν δύο μεγάλα κουμπιά πλοήγησης,
+            - Το κουμπί στα αριστερά σε πάει στο προηγούμενο γράμμα,
+            - και το κουμπί στα δεξιά σε πάει στο επόμενο γράμμα.
+        Αν βρίσκεσαι στο πρώτο γράμμα (Άλφα), θα υπάρχει μόνο το δεξί κουμπί, το οποίο θα είναι τοποθετημένο στη μέση.
+        Πώς να αισθανθείς τη διάταξη.
+        Για να αναγνωρίσεις σωστά το γράμμα,
+            1) Ξεκίνα πάντα από επάνω αριστερά.
+            2) Κινήσου κατακόρυφα προς τα κάτω, μετά δεξιά και πάλι προς τα πάνω.
+            3) Οι κουκκίδες που “απαντούν” με δόνηση είναι οι ενεργές.
+            4) Συνδύασε τις ενεργές θέσεις με τη φωνητική πληροφορία του γράμματος.
+        Τέλος, για να επιστρέψεις στην αρχική σελίδα, πάτησε στο επάνω μέρος της οθόνης.
+        Τέλος οδηγιών.
+        Πάτησε στο κάτω μέρος της οθόνης για να ξεκινήσεις την εκμάθηση.
     </string>
     <string name="alpha">Άλφα</string>
     <string name="beta">Βήτα</string>
